--- a/src/static/styles/custom-base.css
+++ b/src/static/styles/custom-base.css
@@ -1,1 +1,15 @@
-/* custom base style will here */
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  @apply bg-slate-900 text-gray-50;
+}
